tests/0005-assign-grouping.src.err
ERROR: unexpected infix operation
 | (a) = "value";
       ^
