tests/0005-assign-grouping.src
let a = 'a';
(a) = "value";